// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Custom Class Name DOM Snapshot 1`] = `
<div
  className="slds-notify-container this-is-the-container"
>
  <div
    className="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_info this-is-the-alert"
    role="alert"
  >
    <span
      className="slds-assistive-text"
    >
      info
    </span>
    <span
      className="slds-m-right--x-small"
    >
      <svg
        aria-hidden="true"
        className="slds-icon slds-icon--x-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#user"
        />
      </svg>
      
    </span>
    <h2>
      Logged in as John Smith (johnsmith@acme.com).
       
      <a
        href="javascript:void(0);"
        onClick={[Function]}
      >
        Log out
      </a>
    </h2>
  </div>
</div>
`;

exports[`Alert Custom Class Name HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container this-is-the-container\\">
  <div class=\\"slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_info this-is-the-alert\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">info</span><span class=\\"slds-m-right--x-small\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#user\\"></use></svg></span>
    <h2>Logged in as John Smith (johnsmith@acme.com). <a href=\\"javascript:void(0);\\">Log out</a></h2>
  </div>
</div>"
`;

exports[`Alert Dismissable DOM Snapshot 1`] = `
<div
  className="slds-notify-container"
>
  <div
    className="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_info"
    role="alert"
  >
    <span
      className="slds-assistive-text"
    >
      info
    </span>
    <span
      className="slds-m-right--x-small"
    >
      <svg
        aria-hidden="true"
        className="slds-icon slds-icon--x-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#user"
        />
      </svg>
      
    </span>
    <h2>
      Logged in as John Smith (johnsmith@acme.com).
       
      <a
        href="javascript:void(0);"
        onClick={[Function]}
      >
        Log out
      </a>
    </h2>
    <button
      className="slds-button slds-button--icon-inverse slds-notify__close"
      disabled={false}
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Close
      </span>
    </button>
  </div>
</div>
`;

exports[`Alert Dismissable HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_info\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">info</span><span class=\\"slds-m-right--x-small\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#user\\"></use></svg></span>
    <h2>Logged in as John Smith (johnsmith@acme.com). <a href=\\"javascript:void(0);\\">Log out</a></h2><button class=\\"slds-button slds-button--icon-inverse slds-notify__close\\" title=\\"Close\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Close</span></button></div>
</div>"
`;

exports[`Alert Error DOM Snapshot 1`] = `
<div
  className="slds-notify-container"
>
  <div
    className="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_error"
    role="alert"
  >
    <span
      className="slds-assistive-text"
    >
      error
    </span>
    <span
      className="slds-m-right--x-small"
    >
      <svg
        aria-hidden="true"
        className="slds-icon slds-icon--x-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#error"
        />
      </svg>
      
    </span>
    <h2>
      Your browser is currently not supported. Your Salesforce may be degraded.
       
      <a
        href="javascript:void(0);"
        onClick={[Function]}
      >
        More Information
      </a>
    </h2>
  </div>
</div>
`;

exports[`Alert Error HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_error\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">error</span><span class=\\"slds-m-right--x-small\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#error\\"></use></svg></span>
    <h2>Your browser is currently not supported. Your Salesforce may be degraded. <a href=\\"javascript:void(0);\\">More Information</a></h2>
  </div>
</div>"
`;

exports[`Alert Info DOM Snapshot 1`] = `
<div
  className="slds-notify-container"
>
  <div
    className="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_info"
    role="alert"
  >
    <span
      className="slds-assistive-text"
    >
      info
    </span>
    <span
      className="slds-m-right--x-small"
    >
      <svg
        aria-hidden="true"
        className="slds-icon slds-icon--x-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#user"
        />
      </svg>
      
    </span>
    <h2>
      Logged in as John Smith (johnsmith@acme.com).
       
      <a
        href="javascript:void(0);"
        onClick={[Function]}
      >
        Log out
      </a>
    </h2>
  </div>
</div>
`;

exports[`Alert Info HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_info\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">info</span><span class=\\"slds-m-right--x-small\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#user\\"></use></svg></span>
    <h2>Logged in as John Smith (johnsmith@acme.com). <a href=\\"javascript:void(0);\\">Log out</a></h2>
  </div>
</div>"
`;

exports[`Alert Offline DOM Snapshot 1`] = `
<div
  className="slds-notify-container"
>
  <div
    className="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_offline"
    role="alert"
  >
    <span
      className="slds-assistive-text"
    >
      offline
    </span>
    <span
      className="slds-m-right--x-small"
    >
      <svg
        aria-hidden="true"
        className="slds-icon slds-icon--x-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#offline"
        />
      </svg>
      
    </span>
    <h2>
      You are in offline mode.
       
      <a
        href="javascript:void(0);"
        onClick={[Function]}
      >
        More information
      </a>
    </h2>
  </div>
</div>
`;

exports[`Alert Offline HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_offline\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">offline</span><span class=\\"slds-m-right--x-small\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#offline\\"></use></svg></span>
    <h2>You are in offline mode. <a href=\\"javascript:void(0);\\">More information</a></h2>
  </div>
</div>"
`;

exports[`Alert Warning DOM Snapshot 1`] = `
<div
  className="slds-notify-container"
>
  <div
    className="slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_warning"
    role="alert"
  >
    <span
      className="slds-assistive-text"
    >
      warning
    </span>
    <span
      className="slds-m-right--x-small"
    >
      <svg
        aria-hidden="true"
        className="slds-icon slds-icon--x-small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#warning"
        />
      </svg>
      
    </span>
    <h2>
      Your browser is outdated. Your Salesforce experience may be degraded.
       
      <a
        href="javascript:void(0);"
        onClick={[Function]}
      >
        More Information
      </a>
    </h2>
  </div>
</div>
`;

exports[`Alert Warning HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_warning\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">warning</span><span class=\\"slds-m-right--x-small\\"><svg aria-hidden=\\"true\\" class=\\"slds-icon slds-icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#warning\\"></use></svg></span>
    <h2>Your browser is outdated. Your Salesforce experience may be degraded. <a href=\\"javascript:void(0);\\">More Information</a></h2>
  </div>
</div>"
`;
